# mc-legacy-formatting

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  editor-gui.js  editor-gui_bg.wasm  index.html
.github/workflows/: audit.yml  ci.yml  pages.yml
docs/: README.md  editor_gui.js  editor_gui_bg.wasm  index.html  manifest.json  sw.js
editor-gui/: Cargo.toml  README.md  Trunk.toml  build_web.sh  index.html  start_server.sh
editor-gui/docs/: editor_gui.js  editor_gui_bg.wasm
editor-gui/src/: app.rs  formatting.rs  lib.rs  main.rs
mc-legacy-formatting/: Cargo.toml
mc-legacy-formatting/examples/: slp.rs
mc-legacy-formatting/src/: color_print.rs  lib.rs
mc-legacy-formatting/tests/: basic.rs  common.rs  from_servers.rs
src/: color_print.rs  lib.rs
test-helper/: Cargo.toml
test-helper/src/: main.rs
