[package]
name = "mc-legacy-formatting"
version = "0.1.0"
authors = ["Cldfire <cldfire3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
colored = "2.0"

[dev-dependencies]
pretty_assertions = "0.6"
