[package]
name = "mc-legacy-formatting"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Cldfire <cldfire3@gmail.com>"]
repository = "https://github.com/Cldfire/mc-legacy-formatting"
description = "A non-allocating parser for Minecraft's legacy formatting system"
keywords = ["minecraft", "ping", "server", "color", "code"]
categories = ["game-development", "no-std", "parser-implementations"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
colored = { version = "2.0", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"

[features]
default = ["color-print"]
# Enables helpers to pretty-print spans to the terminal with colors; disables
# no-std support
color-print = ["colored"]
