[package]
name = "editor-gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0"
mc-legacy-formatting = { path = "../mc-legacy-formatting" }

[profile.release]
opt-level = 2
